--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /teste_de_unidade/nbproject/private/
 /teste_de_unidade/build/
 /teste_de_unidade/dist/
+/teste_de_unidade_mokito/br.com.caelum.leilao.dominio/nbproject/private/
+/teste-de-unidade/nbproject/private/
+/teste-de-unidade/build/
