--- a/Alura/testes_unitarios/nbproject/project.properties
+++ b/Alura/testes_unitarios/nbproject/project.properties
@@ -28,8 +28,10 @@ dist.jar=${dist.dir}/br.com.caelum.leilao.dominio.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.hamcrest-core-1.3.jar=C:\\Program Files\\NetBeans 8.2\\bin\\hamcrest-core-1.3.jar
+file.reference.hamcrest-core-1.3.jar-1=..\\hamcrest-core-1.3.jar
 file.reference.hamcrest-junit-2.0.0.0.jar=C:\\Program Files\\NetBeans 8.2\\bin\\hamcrest-junit-2.0.0.0.jar
 file.reference.junit-4.12.jar=C:\\Program Files\\NetBeans 8.2\\bin\\junit-4.12.jar
+file.reference.junit-4.12.jar-1=..\\junit-4.12.jar
 includes=**
 jar.compress=false
 javac.classpath=
@@ -46,7 +48,9 @@ javac.test.classpath=\
     ${build.classes.dir}:\
     ${file.reference.junit-4.12.jar}:\
     ${file.reference.hamcrest-junit-2.0.0.0.jar}:\
-    ${file.reference.hamcrest-core-1.3.jar}
+    ${file.reference.hamcrest-core-1.3.jar}:\
+    ${file.reference.junit-4.12.jar-1}:\
+    ${file.reference.hamcrest-core-1.3.jar-1}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
