--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /teste_de_unidade_mokito/br.com.caelum.leilao.dominio/nbproject/private/
 /teste-de-unidade/nbproject/private/
 /teste-de-unidade/build/
+/Mokito/nbproject/private/
+/Mokito/build/
