--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@
 /Mokito/build/
 /Selennium/nbproject/private/
 /Selennium/build/
+/Alura/Hibernate/TestesDeIntegracao/nbproject/private/
+/Alura/Hibernate/TestesDeIntegracao/build/
