--- a/ReservaSala/app/src/main/AndroidManifest.xml
+++ b/ReservaSala/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         </activity>
         <activity android:name=".ACTIVITY.LoginActivity" />
         <activity android:name=".ACTIVITY.CadastroActivity" />
-        <activity android:name=".ACTIVITY.PrincipalActivity"></activity>
+        <activity android:name=".ACTIVITY.PrincipalActivity" />
+        <activity android:name=".ACTIVITY.CadastrarSalaActivity"></activity>
     </application>
 
 </manifest>
