--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@
 Alura/Rest Assured/leiloes/
 /Alura/Rest Assured/ProjetoRest/Teste/nbproject/private/
 /Alura/Rest Assured/ProjetoRest/Teste/build/
+/Trilha_Estudos_Logic_JEE/projetoJavaEE/EJB/target/
+/Trilha_Estudos_Logic_JEE/projetoJavaEE/webService/target/
